--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         tools:ignore="GoogleAppIndexingWarning">
 
         <activity
-            android:name=".ui.collections.CollectionsActivity"
+            android:name=".ui.collectionsNew.CollectionsNewActivity"
             android:screenOrientation="portrait">
 
             <intent-filter>
